--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -25,9 +25,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  place-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #888888;
+
 }
 
 h1 {
