--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #888888;
+  background-color: black;
 
 }
 
